@@ -2,7 +2,6 @@ package generics.methods;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.CoreMatchers.is;
@@ -12,9 +11,9 @@ public class MinimumElementExample {
 
     @Test
     public void findsMinimumElementFromList() {
-        assertThat(minimumElement(Arrays.asList(1, 2, -5)), is(-5));
+        assertThat(minimumElement(List.of(1, 2, -5)), is(-5));
 
-        assertThat(minimumElementForStrings(Arrays.asList("b", "a", "c")), is("a"));
+        assertThat(minimumElementForStrings(List.of("b", "a", "c")), is("a"));
     }
 
 
